# synacor-challenge

./: .gitignore  CMakeLists.txt  README.md  arch-spec
ConfirmationAlgo/: CMakeLists.txt
ConfirmationAlgo/src/: bruteforceAlgo.cpp
CrackVaultKey/: CMakeLists.txt
CrackVaultKey/src/: CrackVaultKey.cpp
include/: Op.hpp  VirtualMachine.hpp
src/: Op.cpp  VirtualMachine.cpp  main.cpp
